@@ -34,9 +34,14 @@ Win_GParted::Win_GParted( )
 	this ->set_title( _("GParted") );
 	this ->set_default_size( 775, 500 );
 	
-	try {
+	try
+	{
 		this ->set_icon_from_file( GNOME_ICONDIR "/gparted.png" ) ;
-	} catch ( Glib::Exception & e ) { std::cout << e .what() << std::endl ; } 
+	}
+	catch ( Glib::Exception & e )
+	{ 
+		std::cout << e .what() << std::endl ;
+	} 
 	
 	//Pack the main box
 	this ->add( vbox_main ); 
