@@ -1,3 +1,14 @@
+2005-12-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* merry christmas
+	* src/GParted_Core.cc,
+	  src/VBox_VisualDisk.cc,
+	  src/Win_GParted.cc: cleanups
+	* include/FileSystem.h,
+	  src/FileSystem.cc,
+	  src/ext2.cc,
+	  src/ext3.cc: replaced popen() with Glib::spawn_command_line_sync()
+
 2005-12-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/TreeView_Detail.cc: replaced C-style cast with static_cast
